--- a/livestream-ios/livestream-ios/en.lproj/MainStoryboard.storyboard
+++ b/livestream-ios/livestream-ios/en.lproj/MainStoryboard.storyboard
@@ -31,7 +31,7 @@
                                             <rect key="frame" x="132" y="6" width="158" height="30"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="16"/>
-                                            <textInputTraits key="textInputTraits"/>
+                                            <textInputTraits key="textInputTraits" returnKeyType="done"/>
                                             <connections>
                                                 <outlet property="delegate" destination="Qvm-ZH-ybE" id="mNH-lU-OLN"/>
                                             </connections>
